Set mobile font size to 16; fixed pre word wrapping.

--- a/themes/wirehaiku/assets/basics.scss
+++ b/themes/wirehaiku/assets/basics.scss
@@ -70,6 +70,8 @@ pre {
         font-weight: 700;
         line-height: 2.75rem;
         padding: 0.75rem 1rem;
+        white-space: pre-wrap;
+        word-break: break-word;
     }
 }
 
